force-app/main/default/objects/User/fields/Current_Account__c.field-meta.xml
<CustomField>
    <fullName>Current_Account__c</fullName>
    <label>Current Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>