force-app/main/default/objects/User/fields/GPMS_FTLS__c.field-meta.xml
<CustomField>
    <fullName>GPMS_FTLS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine if the user has completed the login flow</description>
    <label>FTLS</label>
    <type>Checkbox</type>
</CustomField>