force-app/main/default/objects/User/fields/GPMS_Portal_Role__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Portal_Role__c</fullName>
    <description>Role of the portal users. Used for determining their access.</description>
    <label>Portal Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Organisation Administrator</fullName>
            </value>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Staff Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>