force-app/main/default/objects/User/fields/InactivateUserDate__c.field-meta.xml
<CustomField>
    <fullName>InactivateUserDate__c</fullName>
    <label>Inactivate User Date</label>
    <type>Date</type>
</CustomField>